# APA

./: .gitignore  env.sh  squery.sh
02_3D_Stencil/FDTD3d/: Makefile  launch_3d2.sh
02_3D_Stencil/include/: helper.hpp
02_3D_Stencil/launch/: launch_3d.sh  launch_3d2.sh
02_3D_Stencil/plots/: flps.py
02_3D_Stencil/results/: 2-FDTD3d-20221123_145952-1.txt  2-FDTD3d-20221123_145952-10.txt  2-FDTD3d-20221123_145952-2.txt  2-FDTD3d-20221123_145952-3.txt  2-FDTD3d-20221123_145952-4.txt  2-FDTD3d-20221123_145952-5.txt  2-FDTD3d-20221123_145952-6.txt  2-FDTD3d-20221123_145952-7.txt  2-FDTD3d-20221123_145952-8.txt  2-FDTD3d-20221123_145952-9.txt  2-FDTD3d-20221127_230803-1.txt  2-FDTD3d-20221127_230803-10.txt  2-FDTD3d-20221127_230803-3.txt  2-FDTD3d-20221127_230803-4.txt  2-FDTD3d-20221127_230803-5.txt  2-FDTD3d-20221127_230803-6.txt  2-FDTD3d-20221127_230803-7.txt  2-FDTD3d-20221127_230803-8.txt  2-FDTD3d-20221127_230803-9.txt  2-FDTD3d-20221127_232717-2.txt  FDTD3d-20221121_212451.txt  FDTD3d-20221121_212618.txt  FDTD3d-20221121_221021.txt  FDTD3d-20221121_221316.txt  FDTD3d-20221121_221805-1.txt  FDTD3d-20221121_221805-10.txt  FDTD3d-20221121_221805-2.txt  FDTD3d-20221121_221805-3.txt  FDTD3d-20221121_221805-4.txt  FDTD3d-20221121_221805-5.txt  FDTD3d-20221121_221805-6.txt  FDTD3d-20221121_221805-7.txt  FDTD3d-20221121_221805-8.txt  FDTD3d-20221121_221805-9.txt  FDTD3d-20221122_193716-1.txt  (+21 more)
Intrinsics_Reduction/: Makefile
Template_Project/: CMakeLists.txt  bandwidth.cu
Template_Project/launch/: blt.sh  launch_bw.sh
Template_Project/plots/: plt.py
(+263 files in other folders)
